Fixed header z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,7 +26,7 @@ header.default {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 200;
+  z-index: 400;
   
   .logo {
     width: 200px;
